# people-flow-api

./: .env.sample  .flake8  .gitignore  People Flow.postman_collection.json  README.md  manage.py  pyproject.toml
api/: urls.py
employees/: models.py
employees/api/: serializers.py  urls.py  views.py
employees/migrations/: 0001_initial.py  0002_alter_jobposition_description.py  0003_alter_jobposition_title.py
peopleflow/: asgi.py  settings.py  urls.py  wsgi.py
