[project]
name = "people-flow"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas Gallardo",email = "alfredongallg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "django (==4.2)",
    "djangorestframework (==3.14)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-environ (>=0.12.0,<0.13.0)"
]

[tool.poetry]
packages = [{include = "people_flow", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
